--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "gulp-postcss": "6.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-svgmin": "^1.2.3",
-    "gulp-svgstore": "^6.1.0"
+    "gulp-svgstore": "^6.1.0",
+    "run-sequence": "^1.2.2"
   },
   "scripts": {
     "test": "editorconfig-cli",
-    "build": "gulp style",
-    "start": "gulp serve"
+    "build": "gulp build",
+    "start": "npm run build && gulp serve"
   },
   "editorconfig-cli": [
     "*.html",
