--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "css-mqpacker": "^5.0.1",
     "del": "^2.2.2",
     "gulp": "3.9.1",
+    "gulp-add-src": "^0.2.0",
+    "gulp-concat": "^2.6.1",
     "gulp-csso": "^2.0.0",
     "gulp-imagemin": "^3.1.1",
     "gulp-less": "3.3.0",
